crates/stems-cli/tests/snapshots/help__stems_config_set.snap
---
source: crates/stems-cli/tests/help.rs
expression: help
---
Set a value in stems.local.yaml

Usage: stems config set [OPTIONS] <PATH> <VALUE>

Arguments:
  <PATH>
          Dotted config path

  <VALUE>
          Value (parsed as YAML)

Options:
  -h, --help
          Print help

Global options:
      --workspace <PATH>
          Workspace directory or stems.yaml path (default: $STEMS_WORKSPACE, else walk up from the
          current directory)

      --json
          Emit the JSON envelope (the default when stdout is not a terminal)

      --human
          Emit human text even when stdout is not a terminal

      --no-color
          Disable colours in human output
          
          [env: STEMS_NO_COLOR]

  -q, --quiet
          Print only errors in human mode

  -v, --verbose...
          More detail (repeat for more: -vv)

      --home <PATH>
          Root for daemon state, sockets, locks and logs (default: ~/Library/Application
          Support/stems on macOS, $XDG_STATE_HOME/stems or ~/.local/state/stems on Linux)
          
          [env: STEMS_HOME]
